testsuite/tests/checks/function_style_procedures/test.out
function_style_procedures.ads:3:14: error: procedure can be rewritten as function
3 |    procedure P (R : out Integer);  -- FLAG
  |              ^ 

